; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_settings.c_set_format_date.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_settings.c_set_format_date.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@conf = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@.str = private unnamed_addr constant [7 x i8] c"%Y%m%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @set_format_date to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @set_format_date() #0 {
  %1 = alloca i8*, align 8
  store i8* null, i8** %1, align 8
  %2 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 0), align 4
  %3 = call i64 @has_timestamp(i32 %2)
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = call i8* @xstrdup(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  store i8* %6, i8** %1, align 8
  br label %10

7:                                                ; preds = %0
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 0), align 4
  %9 = call i8* @clean_date_time_format(i32 %8)
  store i8* %9, i8** %1, align 8
  br label %10

10:                                               ; preds = %7, %5
  %11 = load i8*, i8** %1, align 8
  ret i8* %11
}

declare dso_local i64 @has_timestamp(i32) #1

declare dso_local i8* @xstrdup(i8*) #1

declare dso_local i8* @clean_date_time_format(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
